--- a/styles/blocks/advantages/_advantages.scss
+++ b/styles/blocks/advantages/_advantages.scss
@@ -39,4 +39,5 @@
   }
 }
 /*  ===================================  */
+/*  =======END section advantages======  */
 /*  ===================================  */
