--- a/styles/blocks/footer/_footer-svc-links.scss
+++ b/styles/blocks/footer/_footer-svc-links.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Navigation footer section */
+/* Navigation footer section. part of footer */
 .footer-svc-links {
   &__heading {
     font-size: rem(16);
@@ -53,5 +53,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
