--- a/styles/blocks/header/_call-up.scss
+++ b/styles/blocks/header/_call-up.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Block call-up */
+/* Block call-up . Part of header*/
 .call-up {
   @include flex-center;
 
@@ -36,5 +36,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
