--- a/styles/blocks/header/_header-menu.scss
+++ b/styles/blocks/header/_header-menu.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* BLock header-menu */
+/* BLock header-menu .part of header*/
 
 .header-menu {
   &--not-to-scroll {
@@ -56,5 +56,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
