--- a/styles/blocks/locations/_locations-filter.scss
+++ b/styles/blocks/locations/_locations-filter.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Filter services in the block location. ( form and input type ratios*/
+/* Filter services in the block locations. ( form and input type ratios )*/
 .locations-filter {
   &__border {
     display: flex;
@@ -57,5 +57,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
