--- a/styles/blocks/messenger-action/_messenger-action.scss
+++ b/styles/blocks/messenger-action/_messenger-action.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Styles from section messenger-action. Main sourse is home page */
+/* Styles from section messenger-action. sourse is home page */
 .messenger-action {
   &__wrapper {
     background: var(--color-grad-1);
@@ -51,4 +51,5 @@
 }
 
 /*  ===================================  */
+/*  ====END section messenger-action===  */
 /*  ===================================  */
