--- a/styles/blocks/our-clients/our-clients.css
+++ b/styles/blocks/our-clients/our-clients.css
@@ -50,6 +50,7 @@
   }
 }
 /*  ===================================  */
+/*  =======END section our clients=====  */
 /*  ===================================  */
 
 /*# sourceMappingURL=our-clients.css.map */
