--- a/styles/blocks/overview-services/_services-promotion.scss
+++ b/styles/blocks/overview-services/_services-promotion.scss
@@ -1,7 +1,7 @@
 @use "../../healpers" as *;
 @use "../сommon-blocks/accent-link";
 
-/* That's styles for services promotion. General component is overview-services on the home page */
+/* That's styles for services promotion. General component for section overview-services on the home page */
 
 .services-promotion {
   display: flex;
@@ -100,5 +100,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
