--- a/styles/blocks/promo/promo-main-page.css
+++ b/styles/blocks/promo/promo-main-page.css
@@ -176,6 +176,7 @@
   }
 }
 /*  ===================================  */
+/*  =====END promo block(home page)====  */
 /*  ===================================  */
 
 /*# sourceMappingURL=promo-main-page.css.map */
