--- a/styles/blocks/сommon-blocks/_logo.scss
+++ b/styles/blocks/сommon-blocks/_logo.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Styles for block logo */
+/* Styles for common block logo */
 .logo {
   width: rem(330);
   height: rem(70);
