--- a/styles/blocks/certificates/_certificates.scss
+++ b/styles/blocks/certificates/_certificates.scss
@@ -41,4 +41,5 @@
   }
 }
 /*  ===================================  */
+/*  =======END section certificates======  */
 /*  ===================================  */
