--- a/styles/blocks/certificates/certificates.css
+++ b/styles/blocks/certificates/certificates.css
@@ -44,6 +44,7 @@
 }
 
 /*  ===================================  */
+/*  =======END section certificates======  */
 /*  ===================================  */
 
 /*# sourceMappingURL=certificates.css.map */
