--- a/styles/blocks/footer/footer.css
+++ b/styles/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-/* Navigation footer section */
+/* Navigation footer section. part of footer */
 .footer-svc-links__heading {
   font-size: 1rem;
   line-height: 2.625rem;
@@ -39,8 +39,6 @@
     gap: 0.875rem 1.5rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
 /* Block footer */
 .footer {
   background-color: var(--color-gray-800);
@@ -257,6 +255,7 @@
   }
 }
 /*  ===================================  */
+/*  =============END footer============  */
 /*  ===================================  */
 
 /*# sourceMappingURL=footer.css.map */
