--- a/styles/blocks/footer/footer.scss
+++ b/styles/blocks/footer/footer.scss
@@ -273,4 +273,5 @@
   }
 }
 /*  ===================================  */
+/*  =============END footer============  */
 /*  ===================================  */
