--- a/styles/blocks/header/header.css
+++ b/styles/blocks/header/header.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* Block call-up */
+/* Block call-up . Part of header*/
 .call-up {
   display: flex;
   justify-content: center;
@@ -31,9 +31,7 @@
     font-size: 0.875rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
-/* BLock header-menu */
+/* BLock header-menu .part of header*/
 .header-menu--not-to-scroll {
   /* Временно , заменить на display none , через JS */
   animation-name: hidden-to-scroll;
@@ -80,8 +78,6 @@
     padding-inline: 0.4375rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
 /* BLock header-top-menu */
 .header-top-menu {
   --mobileMenuTextColor: var(--color-light);
@@ -122,6 +118,7 @@
 }
 /*  ===================================  */
 /*  ===================================  */
+/* Styles for mobile menu. part of header */
 .mobile-menu {
   --mobileMenuBackgroundColor: var(--color-gray-900);
   z-index: 4;
@@ -198,9 +195,7 @@
   overflow: hidden;
 }
 
-/*  ===================================  */
-/*  ===================================  */
-/* General block header */
+/* General block header.For all pages. */
 .header {
   position: sticky;
   top: 0;
@@ -298,6 +293,7 @@
   }
 }
 /*  ===================================  */
+/*  =============END header============  */
 /*  ===================================  */
 
 /*# sourceMappingURL=header.css.map */
