--- a/styles/blocks/locations/_locations.scss
+++ b/styles/blocks/locations/_locations.scss
@@ -3,7 +3,7 @@
 @use "locations-filter";
 @use "locations-card";
 @use "map-block";
-/* Component for the user to select a suitable service on the map */
+/* Section locations. Component for the user to select a suitable service on the map. sourse home page */
 .locations {
   --locationScrollThumbColor: var(--color-gray-400);
   --locationScrollThumbColorHover: var(--color-gray-500);
@@ -124,4 +124,5 @@
   }
 }
 /*  ===================================  */
+/*  =======END section locations=======  */
 /*  ===================================  */
