--- a/styles/blocks/locations/_map-block.scss
+++ b/styles/blocks/locations/_map-block.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Styles for the map. Current, will need to be added...*/
+/* Styles for the map. part of block locations .Current, will need to be added...*/
 .map-block {
   position: relative;
 
@@ -21,5 +21,3 @@
     }
   }
 }
-/*  ===================================  */
-/*  ===================================  */
