--- a/styles/blocks/online-registration/online-registration.scss
+++ b/styles/blocks/online-registration/online-registration.scss
@@ -1,18 +1,12 @@
 @use "../../healpers" as *;
-@use "../locations/locations";
+@use "../locations/_locations.scss";
 
-/* Styles for section online-registration.( home page. block containing cervices map */
+/* Styles for section online-registration.( home page. block containing cervices map )*/
 .online-registration {
   --section-margin-y: #{rem(80)};
 
   &__subtitle {
     max-width: rem(778);
-    color: var(--text-color-dark-secondary);
-    text-align: center;
-    line-height: 1.5;
-    font-weight: 600;
-    margin-inline: auto;
-    margin-block: 0 fluid(50, 20);
   }
 
   &__buttons {
@@ -22,4 +16,5 @@
   }
 }
 /*  ===================================  */
+/*  ==END section online-registration==  */
 /*  ===================================  */
