--- a/styles/blocks/our-clients/_our-clients.scss
+++ b/styles/blocks/our-clients/_our-clients.scss
@@ -50,4 +50,5 @@
   }
 }
 /*  ===================================  */
+/*  =======END section our clients=====  */
 /*  ===================================  */
