--- a/styles/blocks/overview-services/_overview-services.scss
+++ b/styles/blocks/overview-services/_overview-services.scss
@@ -1,7 +1,7 @@
 @use "../../healpers" as *;
 @use "../сommon-blocks/services-menu";
 @use "services-promotion";
-/* Styles for block overview-services on the home page */
+/* Styles for section overview-services on the home page */
 .overview-services {
   display: flex;
   gap: rem(24);
@@ -87,4 +87,5 @@
   }
 }
 /*  ===================================  */
+/*  ===END section overview-services===  */
 /*  ===================================  */
