--- a/styles/blocks/promo/promo-main-page.scss
+++ b/styles/blocks/promo/promo-main-page.scss
@@ -215,4 +215,5 @@
   }
 }
 /*  ===================================  */
+/*  =====END promo block(home page)====  */
 /*  ===================================  */
