--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -9,6 +9,15 @@
     text-align: center;
     line-height: 1.2;
   }
+
+  &__subtitle {
+    color: var(--text-color-dark-secondary);
+    text-align: center;
+    line-height: 1.5;
+    font-weight: 600;
+    margin-inline: auto;
+    margin-block: 0 fluid(50, 20);
+  }
 }
 @include tablet-media {
   .section {
