--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -155,8 +155,11 @@ svg * {
   --color-gray-750: #484848;
   --color-gray-700: #66605f;
   --color-gray-600: #746e6d;
+  --color-gray-550: #808080;
   --color-gray-500: #968e8e;
+  --color-gray-450: #a5a5a5;
   --color-gray-400: #ccc5c5;
+  --color-gray-350: #c8c8c8;
   --color-gray-300: #e1dcdb;
   --color-gray-100: #f3eded;
   --color-gray-90: #dcdcdc;
@@ -180,6 +183,7 @@ svg * {
   --color-green-light: #31ba49;
   --color-blue: #2c94ea;
   --color-blue-light: #2cabea;
+  --color-gold: #f8981c;
   --color-light: #ffffff;
   --color-black-light: #363535;
   --text-color-light: var(--color-gray-50);
@@ -189,6 +193,8 @@ svg * {
   --color-accent: var(--color-accent-500);
   --color-error: var(--color-red);
   --color-success: var(--color-green);
+  --color-rating-star: var(--color-gray-350);
+  --color-rating-star-active: var(--color-gold);
   --color-border-medium: var(--color-gray-700);
   --color-border: var(--color-gray-500);
   --color-border-light: var(--color-gray-300);
@@ -499,7 +505,7 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  ===================================  */
-/* Styles for block logo */
+/* Styles for common block logo */
 .logo {
   width: 20.625rem;
   height: 4.375rem;
@@ -545,6 +551,14 @@ button[aria-label]::before {
   text-align: center;
   line-height: 1.2;
 }
+.section__subtitle {
+  color: var(--text-color-dark-secondary);
+  text-align: center;
+  line-height: 1.5;
+  font-weight: 600;
+  margin-inline: auto;
+  margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
+}
 
 @media (width <= 63.99875rem) {
   .section__title {
@@ -555,7 +569,7 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  ===================================  */
-/* Block call-up */
+/* Block call-up . Part of header*/
 .call-up {
   display: flex;
   justify-content: center;
@@ -587,9 +601,7 @@ button[aria-label]::before {
     font-size: 0.875rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
-/* BLock header-menu */
+/* BLock header-menu .part of header*/
 .header-menu--not-to-scroll {
   /* Временно , заменить на display none , через JS */
   animation-name: hidden-to-scroll;
@@ -636,8 +648,6 @@ button[aria-label]::before {
     padding-inline: 0.4375rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
 /* BLock header-top-menu */
 .header-top-menu {
   --mobileMenuTextColor: var(--color-light);
@@ -678,6 +688,7 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  ===================================  */
+/* Styles for mobile menu. part of header */
 .mobile-menu {
   --mobileMenuBackgroundColor: var(--color-gray-900);
   z-index: 4;
@@ -754,9 +765,7 @@ button[aria-label]::before {
   overflow: hidden;
 }
 
-/*  ===================================  */
-/*  ===================================  */
-/* General block header */
+/* General block header.For all pages. */
 .header {
   position: sticky;
   top: 0;
@@ -854,6 +863,7 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =============END header============  */
 /*  ===================================  */
 /* File with styles for promo block in the main page */
 .promo {
@@ -1033,6 +1043,7 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =====END promo block(home page)====  */
 /*  ===================================  */
 /* Style for accent red link from common blocks */
 .accent-color-link {
@@ -1147,7 +1158,7 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  ===================================  */
-/* That's styles for services promotion. General component is overview-services on the home page */
+/* That's styles for services promotion. General component for section overview-services on the home page */
 .services-promotion {
   display: flex;
   align-items: center;
@@ -1231,9 +1242,7 @@ button[aria-label]::before {
     right: 16px;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
-/* Styles for block overview-services on the home page */
+/* Styles for section overview-services on the home page */
 .overview-services {
   display: flex;
   gap: 1.5rem;
@@ -1292,8 +1301,9 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  ===END section overview-services===  */
 /*  ===================================  */
-/* Styles from section messenger-action. Main sourse is home page */
+/* Styles from section messenger-action. sourse is home page */
 .messenger-action__wrapper {
   background: var(--color-grad-1);
   display: flex;
@@ -1335,6 +1345,7 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  ====END section messenger-action===  */
 /*  ===================================  */
 /* Styles for single card of special offer. source -- block section special offers */
 .special-offer {
@@ -1433,6 +1444,285 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  ===================================  */
+/* Styles for block-card reviews 
+(reviews-slider). Part of section reviews. source -- home page */
+.review-card {
+  --reviewCardBorderColor: var(--color-gray-90);
+  --reviewCardTitleColor: black;
+  --reviewCardTextColor: var(--color-gray-550);
+  --reviewCardTextLight: var(--color-gray-450);
+  position: relative;
+  width: 100%;
+  min-height: 20.6875rem;
+  outline: 0.0625rem solid var(--reviewCardBorderColor);
+  border-radius: var(--border-radius-extra-small);
+}
+.review-card__button {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  bottom: 0.625rem;
+  right: 0.625rem;
+  font-size: 1.125rem;
+  white-space: nowrap;
+  color: var(--reviewCardTextLight);
+  transition-duration: var(--transition-duration) !important;
+}
+.review-card__button::before {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  translate: 0 30%;
+  height: 2.75rem;
+  width: 6.25rem;
+  content: "";
+}
+@media (any-hover: hover) {
+  .review-card__button:hover {
+    filter: brightness(80%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .review-card__button:active {
+    filter: brightness(80%);
+  }
+}
+.review-card__button:active {
+  scale: 0.96;
+}
+.review-card__button-switcher[type=checkbox] {
+  display: none;
+}
+.review-card__button-switcher[type=checkbox]:checked ~ .review-card__body > .review-card__review {
+  -webkit-line-clamp: unset;
+}
+.review-card__button-switcher[type=checkbox]:checked ~ .review-card__button > .review-card__button-text.is-active {
+  opacity: 0;
+}
+.review-card__button-switcher[type=checkbox]:checked ~ .review-card__button > .review-card__button-text {
+  opacity: 1;
+}
+.review-card__button-text {
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.review-card__button-text.is-active {
+  opacity: 1;
+}
+.review-card__header {
+  padding-inline: 1.5rem;
+  padding-block: 1rem 1.5rem;
+  border-bottom: 0.0625rem solid var(--reviewCardBorderColor);
+}
+.review-card__header-title {
+  font-size: 0.9375rem;
+  line-height: 1.3;
+  text-transform: uppercase;
+  color: var(--reviewCardTitleColor);
+  margin-bottom: 0.875rem;
+}
+.review-card__header-content {
+  display: flex;
+  align-items: center;
+  column-gap: 1.125rem;
+}
+.review-card__image {
+  width: 3.5rem;
+  height: 3.5rem;
+}
+.review-card__description {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.4375rem;
+}
+.review-card__text {
+  color: var(--reviewCardTextColor);
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+.review-card__text--small {
+  font-size: 1rem;
+  color: var(--reviewCardTextLight);
+}
+.review-card__text--color-dark {
+  color: var(--reviewCardTitleColor);
+}
+.review-card__body {
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.4375rem;
+  padding-inline: 1.5rem;
+  padding-block: 0.8125rem 2.1875rem;
+}
+.review-card__user-name {
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.4;
+  color: var(--reviewCardTitleColor);
+}
+.review-card__feature {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.review-card__rating-icon {
+  fill: var(--color-rating-star);
+}
+.review-card__rating-icon.is-active {
+  fill: var(--color-rating-star-active);
+}
+.review-card__date {
+  font-size: 0.9375rem;
+  font-weight: 700;
+  line-height: 1.1;
+  text-transform: uppercase;
+  color: var(--reviewCardTextLight);
+}
+.review-card__review {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+@media (width <= 63.99875rem) {
+  .review-card {
+    min-height: 21.3125rem;
+  }
+  .review-card__user-name {
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  .review-card__text {
+    font-size: 1rem;
+  }
+  .review-card__text--small {
+    font-size: 0.9375rem;
+  }
+  .review-card__date {
+    font-size: 0.75rem;
+    line-height: 1.66;
+  }
+  .review-card__button {
+    font-size: 1rem;
+  }
+  .review-card__body {
+    row-gap: 0.5625rem;
+  }
+}
+/* Styles for block reviews-controls (reviews-slider). Part of section reviews. source -- home page */
+.reviews-controls {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  max-width: 8.625rem;
+  width: 100%;
+  margin-inline: auto;
+  color: var(--text-color-dark-secondary) !important;
+}
+.reviews-controls span {
+  color: var(--text-color-dark-secondary) !important;
+}
+.reviews-controls__pagination {
+  text-align: center;
+}
+.reviews-controls__next, .reviews-controls__prev {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  flex-shrink: 0;
+  border-radius: 0.125rem;
+  transition-duration: var(--transition-duration) !important;
+  color: currentColor;
+  background-color: var(--color-light);
+}
+@media (any-hover: hover) {
+  .reviews-controls__next:hover, .reviews-controls__prev:hover {
+    filter: brightness(90%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .reviews-controls__next:active, .reviews-controls__prev:active {
+    filter: brightness(90%);
+  }
+}
+.reviews-controls__next:active, .reviews-controls__prev:active {
+  scale: 0.9;
+  filter: brightness(90%);
+}
+.reviews-controls__next::before, .reviews-controls__prev::before {
+  width: 0.625rem;
+  height: 0.625rem;
+  position: absolute;
+  content: "";
+  border-left: 0.125rem solid currentColor;
+  border-bottom: 0.125rem solid currentColor;
+}
+.reviews-controls__next::after, .reviews-controls__prev::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 2.75rem;
+  height: 2.75rem;
+  content: "";
+}
+.reviews-controls__prev::before {
+  rotate: 45deg;
+  translate: 25% 0;
+}
+.reviews-controls__next::before {
+  rotate: 225deg;
+  translate: -25% 0;
+}
+
+/* Section reviews. sourse -- home page */
+.reviews {
+  overflow: hidden;
+  padding-block: 0 0.0625rem;
+}
+.reviews__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 0.625rem;
+}
+.reviews__title-icon {
+  width: 36;
+  height: 36;
+}
+.reviews__slider {
+  min-height: 20.8125rem;
+  margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
+}
+.reviews__slider-item {
+  max-width: 25.25rem;
+}
+
+@media (width <= 63.99875rem) {
+  .reviews__slider {
+    margin-block: 0 1.25rem;
+  }
+  .reviews__slider-item {
+    max-width: 21.25rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .reviews__slider-item {
+    max-width: unset;
+  }
+}
+/*  ===================================  */
+/*  ========END section reviews========  */
+/*  ===================================  */
 /* Styles for section our clients( slider with companies logos ) . source -- home page */
 .our-clients {
   overflow-x: hidden;
@@ -1485,8 +1775,9 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =======END section our clients=====  */
 /*  ===================================  */
-/* Block-card for advantage slider*/
+/* Block-card for advantage slider.Part of Section advantages*/
 .advantage-card {
   --advantageCardTextColor: var(--color-gray-750);
   --advantageCardTitleTextColor: var(--color-gray-800);
@@ -1520,8 +1811,6 @@ button[aria-label]::before {
     font-size: 0.9375rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
 /* Section advantages.Slider. source --home-page*/
 .advantages {
   --advantagesSlidesQuantity: 4;
@@ -1556,6 +1845,7 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =======END section advantages======  */
 /*  ===================================  */
 /* Styles for section certificates ( slider with мasters' certificates ) . source -- home page */
 .certificates {
@@ -1602,8 +1892,9 @@ button[aria-label]::before {
 }
 
 /*  ===================================  */
+/*  =======END section certificates======  */
 /*  ===================================  */
-/* Search block. ( form + input + button*/
+/* Search block. ( form + input + button) .part of block locations */
 .search {
   --searchBlockHeight: 2.375rem;
   --searchBgColor: var(--color-light);
@@ -1670,9 +1961,7 @@ button[aria-label]::before {
   stroke: var(--searchIconColor);
 }
 
-/*  ===================================  */
-/*  ===================================  */
-/* Filter services in the block location. ( form and input type ratios*/
+/* Filter services in the block locations. ( form and input type ratios )*/
 .locations-filter__border {
   display: flex;
   align-items: center;
@@ -1730,8 +2019,6 @@ button[aria-label]::before {
   content: "✔";
 }
 
-/*  ===================================  */
-/*  ===================================  */
 /* Styles for location-card . Source - block locations */
 .location-card {
   --locationCardBg: var(--color-light);
@@ -1834,9 +2121,7 @@ button[aria-label]::before {
     word-spacing: 0.2em;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
-/* Styles for the map. Current, will need to be added...*/
+/* Styles for the map. part of block locations .Current, will need to be added...*/
 .map-block {
   position: relative;
 }
@@ -1856,9 +2141,7 @@ button[aria-label]::before {
   left: 40%;
 }
 
-/*  ===================================  */
-/*  ===================================  */
-/* Component for the user to select a suitable service on the map */
+/* Section locations. Component for the user to select a suitable service on the map. sourse home page */
 .locations {
   --locationScrollThumbColor: var(--color-gray-400);
   --locationScrollThumbColorHover: var(--color-gray-500);
@@ -1954,19 +2237,14 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =======END section locations=======  */
 /*  ===================================  */
-/* Styles for section online-registration.( home page. block containing cervices map */
+/* Styles for section online-registration.( home page. block containing cervices map )*/
 .online-registration {
   --section-margin-y: 5rem;
 }
 .online-registration__subtitle {
   max-width: 48.625rem;
-  color: var(--text-color-dark-secondary);
-  text-align: center;
-  line-height: 1.5;
-  font-weight: 600;
-  margin-inline: auto;
-  margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
 }
 .online-registration__buttons {
   display: flex;
@@ -1976,8 +2254,9 @@ button[aria-label]::before {
 }
 
 /*  ===================================  */
+/*  ==END section online-registration==  */
 /*  ===================================  */
-/* Navigation footer section */
+/* Navigation footer section. part of footer */
 .footer-svc-links__heading {
   font-size: 1rem;
   line-height: 2.625rem;
@@ -2018,9 +2297,7 @@ button[aria-label]::before {
     gap: 0.875rem 1.5rem;
   }
 }
-/*  ===================================  */
-/*  ===================================  */
-/* Block footer */
+/* Block footer . For all pages.*/
 .footer {
   background-color: var(--color-gray-800);
   color: var(--color-white-opacity-35);
@@ -2236,6 +2513,7 @@ button[aria-label]::before {
   }
 }
 /*  ===================================  */
+/*  =============END footer============  */
 /*  ===================================  */
 
 /*# sourceMappingURL=index.css.map */
