--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -15,6 +15,7 @@
 @use "../blocks/overview-services/_overview-services.scss";
 @use "../blocks/messenger-action/_messenger-action.scss";
 @use "../blocks/special-offers/_special-offers.scss";
+@use "../blocks/reviews/_reviews.scss";
 @use "../blocks/our-clients/_our-clients.scss";
 @use "../blocks/advantages/_advantages.scss";
 @use "../blocks/certificates/_certificates.scss";
