added section faq

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -17,6 +17,7 @@
   // --color-accent-950: #180302;
 
   --color-gray-900: #161312;
+  --color-gray-850: #2b2b31;
   --color-gray-800: #352f2e;
   --color-gray-750: #484848;
   --color-gray-700: #66605f;
@@ -56,11 +57,13 @@
   --color-red: #ba1414;
   --color-green: #139128;
   --color-green-light: #31ba49;
+  --color-blue-extra-dark: #243746;
   --color-blue: #2c94ea;
   --color-blue-light: #2cabea;
   --color-gold: #f8981c;
   // ================ //
   --color-light: #ffffff;
+  --color-dark: #000000;
   --color-black-light: #363535;
 
   --text-color-light: var(--color-gray-50);
