--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -20,4 +20,5 @@
 @use "../blocks/advantages/_advantages.scss";
 @use "../blocks/certificates/_certificates.scss";
 @use "../blocks/online-registration/_online-registration.scss";
+@use "../blocks/faq/_faq.scss";
 @use "../blocks/footer/_footer.scss";
