--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -151,6 +151,7 @@ svg * {
   --color-accent-500: #fe4f02;
   --color-accent-600: #dc4401;
   --color-gray-900: #161312;
+  --color-gray-850: #2b2b31;
   --color-gray-800: #352f2e;
   --color-gray-750: #484848;
   --color-gray-700: #66605f;
@@ -181,10 +182,12 @@ svg * {
   --color-red: #ba1414;
   --color-green: #139128;
   --color-green-light: #31ba49;
+  --color-blue-extra-dark: #243746;
   --color-blue: #2c94ea;
   --color-blue-light: #2cabea;
   --color-gold: #f8981c;
   --color-light: #ffffff;
+  --color-dark: #000000;
   --color-black-light: #363535;
   --text-color-light: var(--color-gray-50);
   --text-color-dark: var(--color-gray-900);
@@ -2255,6 +2258,90 @@ button[aria-label]::before {
 
 /*  ===================================  */
 /*  ==END section online-registration==  */
+/*  ===================================  */
+/* Section faq and faq-accordion. sourse -- home page */
+.faq-accordion {
+  --faqAccordionQuestionColor: var(--color-gray-850);
+  --faqAccordionAnswerColor: var(--color-gray-750);
+  --faqAccordionAnswerMaxHeight: 62.5rem;
+}
+.faq-accordion__element:not(:last-child) {
+  margin-bottom: 2.5rem;
+}
+.faq-accordion__element-switcher {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+.faq-accordion__element-switcher:checked + .faq-accordion__question .faq-accordion__question-icon {
+  rotate: 135deg;
+}
+.faq-accordion__element-switcher:checked ~ .faq-accordion__answer {
+  max-height: var(--faqAccordionAnswerMaxHeight);
+  padding-top: 0;
+}
+.faq-accordion__question-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--faqAccordionQuestionColor);
+  transition-duration: var(--transition-duration);
+}
+@media (any-hover: hover) {
+  .faq-accordion__question-button:hover {
+    filter: opacity(0.6);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .faq-accordion__question-button:active {
+    filter: opacity(0.6);
+  }
+}
+.faq-accordion__question-button:active {
+  filter: opacity(0.4);
+}
+.faq-accordion__question-icon {
+  display: inline-flex;
+  width: 1.25rem;
+  height: 1.25rem;
+  position: relative;
+  color: var(--color-blue-extra-dark);
+  border: 0.125rem solid currentColor;
+  border-radius: 50%;
+  transition-duration: var(--transition-duration);
+}
+.faq-accordion__question-icon::before, .faq-accordion__question-icon::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  content: "";
+  height: 0.125rem;
+  width: 0.5rem;
+  background-color: currentColor;
+  border-radius: 0.125rem;
+}
+.faq-accordion__question-icon::after {
+  rotate: 90deg;
+}
+.faq-accordion__answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1), padding var(--transition-duration) cubic-bezier(0.4, 0, 0.2, 1);
+}
+.faq-accordion__answer-text {
+  color: var(--faqAccordionAnswerColor);
+  font-size: 16px;
+  line-height: 1.4;
+  padding: 0.625rem 1.5rem 0 0;
+}
+
+/*  ===================================  */
+/*  =========END section faq===========  */
 /*  ===================================  */
 /* Navigation footer section. part of footer */
 .footer-svc-links__heading {
