--- a/styles/index-page/index.scss
+++ b/styles/index-page/index.scss
@@ -21,4 +21,5 @@
 @use "../blocks/certificates/_certificates.scss";
 @use "../blocks/online-registration/_online-registration.scss";
 @use "../blocks/faq/_faq.scss";
+@use "../blocks/appointment-choose/_appointment-choose.scss";
 @use "../blocks/footer/_footer.scss";
