--- a/styles/blocks/locations/_locations-card.scss
+++ b/styles/blocks/locations/_locations-card.scss
@@ -45,20 +45,25 @@
   }
 
   &__address {
-    @include reset-button;
-
-    display: inline-flex;
     flex-grow: 1;
-    text-align: start;
-    letter-spacing: var(--letter-spacing);
-    transition-duration: var(--transition-duration) !important;
 
-    @include hover {
-      filter: opacity(0.6);
-    }
+    &-button {
+      @include reset-button;
 
-    @include active {
-      filter: opacity(0.3);
+      color: var(--text-color-dark);
+      cursor: pointer;
+      letter-spacing: var(--letter-spacing);
+      line-height: 1.3;
+      transition-duration: var(--transition-duration) !important;
+
+      @include hover {
+        filter: opacity(0.6);
+      }
+
+      @include active {
+        filter: opacity(0.3);
+        will-change: transform;
+      }
     }
   }
 
