--- a/styles/addresses-page/addresses.scss
+++ b/styles/addresses-page/addresses.scss
@@ -13,5 +13,6 @@
 @use "../blocks/header/_header.scss";
 @use "../blocks/page-heading/_page-heading.scss";
 @use "../blocks/locations/_locations.scss";
+@use "../blocks/app-entry/_app-entry.scss";
 @use "../blocks/appointment-choose/_appointment-choose.scss";
 @use "../blocks/footer/_footer.scss";
