--- a/styles/index-page/index.css
+++ b/styles/index-page/index.css
@@ -215,6 +215,8 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
+  --section-margin-y-big-to-small: clamp(2.5rem, 0.1744186047rem + 9.3023255814vw, 7.5rem);
   --button-height-small: 2.125rem;
   --button-height: 2.625rem;
   --button-height-big: 2.875rem;
@@ -565,6 +567,12 @@ button[aria-label]::before {
 /* Styles for common block section */
 .section {
   margin-bottom: var(--section-margin-y);
+}
+.section--big-margin {
+  margin-bottom: var(--section-margin-y-big);
+}
+.section--big-to-small-margin {
+  margin-bottom: var(--section-margin-y-big-to-small);
 }
 .section__title {
   margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
