--- a/styles/addresses-page/addresses.css
+++ b/styles/addresses-page/addresses.css
@@ -215,6 +215,8 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
+  --section-margin-y-big-to-small: clamp(2.5rem, 0.1744186047rem + 9.3023255814vw, 7.5rem);
   --button-height-small: 2.125rem;
   --button-height: 2.625rem;
   --button-height-big: 2.875rem;
@@ -565,6 +567,12 @@ button[aria-label]::before {
 /* Styles for common block section */
 .section {
   margin-bottom: var(--section-margin-y);
+}
+.section--big-margin {
+  margin-bottom: var(--section-margin-y-big);
+}
+.section--big-to-small-margin {
+  margin-bottom: var(--section-margin-y-big-to-small);
 }
 .section__title {
   margin-block: 0 clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
@@ -1391,6 +1399,87 @@ button[aria-label]::before {
 }
 /*  ===================================  */
 /*  =============END app-entry=========  */
+/*  ===================================  */
+/* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
+.advantage-card {
+  --advantageCardTextColor: var(--color-gray-700);
+  --advantageCardTitleTextColor: var(--color-gray-800);
+  --ourAdvantageCardBgColor: var(--color-accent-200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.1875rem;
+  max-width: 18.5625rem;
+  width: 100%;
+  padding: 1.1875rem 1.25rem 1.5625rem;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+  background-color: var(--ourAdvantageCardBgColor);
+}
+.advantage-card__image {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.advantage-card__heading {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  text-transform: uppercase;
+  color: var(--advantageCardTitleTextColor);
+}
+.advantage-card__text {
+  color: var(--advantagesCardextColor);
+  line-height: 1.5;
+}
+
+@media (width <= 47.99875rem) {
+  .advantage-card {
+    padding: 1.25rem 1.25rem 1.125rem;
+  }
+  .advantage-card__heading {
+    font-size: 0.9375rem;
+  }
+}
+/* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
+.advantages {
+  --advantagesSlidesQuantity: 4;
+  overflow-x: hidden;
+}
+.advantages__title {
+  margin-block: 0 3.125rem;
+}
+.advantages__slider-wrapper {
+  display: grid;
+  grid-template-rows: auto !important;
+  grid-template-columns: repeat(var(--advantagesSlidesQuantity), 18.5625rem);
+  column-gap: 1.5rem;
+}
+.advantages__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.advantages__button {
+  font-size: 1rem;
+}
+
+@media (width <= 63.99875rem) {
+  .advantages__slider {
+    margin-block: 0 1.25rem;
+  }
+  .advantages__buttons {
+    column-gap: 1rem;
+    justify-content: start;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__slider-wrapper {
+    column-gap: 0.625rem;
+  }
+}
+/*  ===================================  */
+/*  =======END section advantages======  */
 /*  ===================================  */
 /* Section appointment-choose */
 .appointment-choose {
