--- a/styles/addresses-page/addresses.scss
+++ b/styles/addresses-page/addresses.scss
@@ -14,6 +14,6 @@
 @use "../blocks/page-heading/_page-heading.scss";
 @use "../blocks/locations/_locations.scss";
 @use "../blocks/app-entry/_app-entry.scss";
-@use "../blocks/advantages/our-advantages";
+@use "../blocks/advantages/_our-advantages.scss";
 @use "../blocks/appointment-choose/_appointment-choose.scss";
 @use "../blocks/footer/_footer.scss";
