added section address-info. page address-card

--- a/styles/addresses-card-page/addresses-card.scss
+++ b/styles/addresses-card-page/addresses-card.scss
@@ -13,6 +13,7 @@
 @use "../blocks/header/_header.scss";
 @use "../blocks/page-heading/_page-heading.scss";
 @use "../blocks/locations/_locations-short.scss";
+@use "../blocks/address-info/_address-info.scss";
 @use "../blocks/advantages/_our-advantages.scss";
 @use "../blocks/other-services/_other-services.scss";
 @use "../blocks/appointment-choose/_appointment-choose.scss";
