--- a/styles/blocks/certificates/_certificates.scss
+++ b/styles/blocks/certificates/_certificates.scss
@@ -41,5 +41,5 @@
   }
 }
 /*  ===================================  */
-/*  =======END section certificates======  */
+/*  =======END section certificates====  */
 /*  ===================================  */
