--- a/styles/blocks/сommon-blocks/_service.scss
+++ b/styles/blocks/сommon-blocks/_service.scss
@@ -34,6 +34,7 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      column-gap: rem(4);
       text-transform: uppercase;
       width: 100%;
 
