--- a/styles/addresses-card-page/addresses-card.css
+++ b/styles/addresses-card-page/addresses-card.css
@@ -162,6 +162,7 @@ svg * {
   --color-gray-400: #ccc5c5;
   --color-gray-350: #c8c8c8;
   --color-gray-300: #e1dcdb;
+  --color-gray-200: #ece4e4;
   --color-gray-100: #f3eded;
   --color-gray-90: #dcdcdc;
   --color-gray-50: #fbf8f8;
@@ -215,7 +216,9 @@ svg * {
   --container-width-big: 120rem;
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
+  --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
+  --section-margin-y-big-to-medium: clamp(3.75rem, 2.0058139535rem + 6.976744186vw, 7.5rem);
   --section-margin-y-big-to-small: clamp(2.5rem, 0.1744186047rem + 9.3023255814vw, 7.5rem);
   --button-height-small: 2.125rem;
   --button-height: 2.625rem;
@@ -454,7 +457,8 @@ button[aria-label]::before {
 /*  ===================================  */
 /* Styles for buttons */
 .button {
-  --buttonColor: var(--color-blue);
+  --buttonColorBg: var(--color-blue);
+  --buttonColorBgLight: var(--color-blue-light);
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -463,7 +467,7 @@ button[aria-label]::before {
   letter-spacing: var(--letter-spacing);
   font-weight: 700;
   color: var(--text-color-light);
-  background-color: var(--buttonColor);
+  background-color: var(--buttonColorBg);
   border: none;
   border-radius: var(--border-radius);
   min-height: var(--button-height);
@@ -483,6 +487,9 @@ button[aria-label]::before {
   filter: brightness(90%);
   will-change: transform;
   scale: 0.97;
+}
+.button--light-bg-color {
+  background-color: var(--buttonColorBgLight);
 }
 .button__icon--tg {
   width: 1.75rem;
@@ -518,7 +525,7 @@ button[aria-label]::before {
 
 @media (width <= 47.99875rem) {
   .button {
-    --buttonColor: var(--color-blue-light);
+    --buttonColorBg: var(--color-blue-light);
   }
   .button--light {
     min-height: var(--button-height-small);
@@ -556,12 +563,6 @@ button[aria-label]::before {
   height: inherit;
 }
 
-@media (width <= 63.99875rem) {
-  .logo {
-    width: 16.4375rem;
-    height: 3.375rem;
-  }
-}
 /*  ===================================  */
 /*  ===================================  */
 /* Styles for common block section */
@@ -570,6 +571,12 @@ button[aria-label]::before {
 }
 .section--big-margin {
   margin-bottom: var(--section-margin-y-big);
+}
+.section--margin-to-medium {
+  margin-bottom: var(--section-margin-y-to-medium);
+}
+.section--big-to-medium-margin {
+  margin-bottom: var(--section-margin-y-big-to-medium);
 }
 .section--big-to-small-margin {
   margin-bottom: var(--section-margin-y-big-to-small);
@@ -850,6 +857,8 @@ button[aria-label]::before {
 @media (width <= 63.99875rem) {
   .header__logo {
     grid-area: logo;
+    width: 16.4375rem;
+    height: 3.375rem;
   }
   .header__general {
     display: grid;
@@ -1227,6 +1236,415 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  ====END section-short locations====  */
 /*  ===================================  */
+/* Styles for address-section svc-contacts.part of conponent address-info. */
+.svc-contacts {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.1875rem;
+}
+.svc-contacts__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.9375rem;
+}
+.svc-contacts__item {
+  display: flex;
+  align-items: center;
+  column-gap: 0.625rem;
+  flex-shrink: 0;
+  width: 100%;
+  min-height: 3rem;
+}
+.svc-contacts__item-icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: var(--color-light);
+  flex-shrink: 0;
+}
+.svc-contacts__item-label {
+  max-width: 6.3125rem;
+  width: 100%;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.17;
+  color: var(--text-color-dark-secondary);
+}
+.svc-contacts__item-text {
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.5;
+  transition-duration: var(--transition-duration) !important;
+}
+.svc-contacts__item-text--phone-number {
+  white-space: nowrap;
+}
+.svc-contacts__item-text--underline {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+}
+
+@media (width <= 47.99875rem) {
+  .svc-contacts {
+    row-gap: 0;
+  }
+}
+/* Style for accent red link from common blocks */
+.accent-color-link {
+  font-weight: 700;
+  font-size: 0.8125rem;
+  line-height: 1.7;
+  letter-spacing: var(--letter-spacing);
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--color-accent-600);
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for common block service */
+.service__name {
+  display: flex;
+  align-items: center;
+  column-gap: 0.625rem;
+  line-height: 1.2;
+  min-height: 4.75rem;
+  padding-inline: 0.625rem;
+}
+.service__name-icon {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.service__link {
+  font-weight: 700;
+  line-height: 1.4;
+}
+.service__link--name {
+  font-size: 1.5rem;
+  line-height: 1.2;
+}
+.service__link--name-small {
+  font-size: 1.25rem;
+}
+.service__link--arrow {
+  font-size: 0.9375rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 0.25rem;
+  text-transform: uppercase;
+  width: 100%;
+}
+.service__link--arrow::after {
+  content: "➜";
+  width: 1.125rem;
+  height: 1.125rem;
+  color: currentColor;
+  font-size: inherit;
+}
+.service__list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+.service__list-item {
+  display: inline-flex;
+  width: 100%;
+  min-height: 3.125rem;
+  padding-inline: 0.625rem 0.25rem;
+}
+
+/*  ===================================  */
+/*  ===================================  */
+/* Styles for nav-section svc-catalog.part of conponent address-info. */
+.svc-catalog {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.125rem;
+}
+.svc-catalog__list {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.1875rem;
+  margin-bottom: 0.625rem;
+}
+.svc-catalog__list-title {
+  grid-column: 1/3;
+}
+
+@media (width <= 81.31125rem) {
+  .svc-catalog__list {
+    grid-template-columns: auto;
+    gap: 0;
+    margin-block: 0;
+  }
+}
+@media (width <= 47.99875rem) {
+  .svc-catalog {
+    row-gap: 0;
+  }
+  .svc-catalog__title {
+    margin-bottom: 1.1875rem;
+  }
+  .svc-catalog__list {
+    gap: 0.9375rem;
+    padding-inline: 0 1.875rem;
+  }
+}
+/* Styles for block address-info-gallery. Slider with images. */
+.address-info-gallery {
+  --addressInfoGalleryControlsColor: var(--color-gray-500);
+  --addressInfoGalleryControlsBgColor: var(--color-gray-200);
+  padding-inline: 5.125rem;
+}
+.address-info-gallery__slider {
+  overflow: hidden;
+  max-width: 68.5rem;
+}
+.address-info-gallery__image {
+  width: inherit;
+  height: inherit;
+}
+.address-info-gallery__image-wrapper {
+  width: 12.5rem;
+  height: 8.125rem;
+}
+.address-info-gallery__prev-slide, .address-info-gallery__next-slide {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  translate: 0 -50%;
+  cursor: pointer;
+  flex-shrink: 0;
+  border-radius: 0.125rem;
+  transition-duration: var(--transition-duration) !important;
+  color: var(--addressInfoGalleryControlsColor);
+  background-color: var(--addressInfoGalleryControlsBgColor);
+}
+.address-info-gallery__prev-slide.swiper-button-disabled, .address-info-gallery__next-slide.swiper-button-disabled {
+  filter: opacity(0.5);
+  pointer-events: none;
+}
+@media (any-hover: hover) {
+  .address-info-gallery__prev-slide:hover, .address-info-gallery__next-slide:hover {
+    filter: brightness(90%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .address-info-gallery__prev-slide:active, .address-info-gallery__next-slide:active {
+    filter: brightness(90%);
+  }
+}
+.address-info-gallery__prev-slide:active, .address-info-gallery__next-slide:active {
+  scale: 0.9;
+  filter: brightness(90%);
+}
+.address-info-gallery__prev-slide::before, .address-info-gallery__next-slide::before {
+  width: 0.625rem;
+  height: 0.625rem;
+  position: absolute;
+  content: "";
+  border-left: 0.125rem solid currentColor;
+  border-bottom: 0.125rem solid currentColor;
+}
+.address-info-gallery__prev-slide::after, .address-info-gallery__next-slide::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  width: 2.75rem;
+  height: 2.75rem;
+  content: "";
+}
+.address-info-gallery__prev-slide {
+  right: 95%;
+}
+.address-info-gallery__prev-slide::before {
+  rotate: 45deg;
+  translate: 25% 0;
+}
+.address-info-gallery__next-slide {
+  left: 95%;
+}
+.address-info-gallery__next-slide::before {
+  rotate: 225deg;
+  translate: -25% 0;
+}
+
+@media (width <= 47.99875rem) {
+  .address-info-gallery {
+    padding-inline: 0;
+  }
+}
+/* Styles for conponent address-info. Descriprion of current service card. */
+.address-info {
+  --addressInfoBlockNameColor: var(--color-gray-850);
+}
+.address-info__title {
+  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
+  margin-bottom: clamp(1.25rem, -0.2034883721rem + 5.8139534884vw, 4.375rem);
+}
+.address-info__body {
+  display: grid;
+  grid-template-columns: minmax(31.9375rem, auto) 1fr;
+  grid-template-areas: "contacts services" "contacts buttons" "qs buttons";
+  column-gap: 1.5rem;
+  margin-bottom: 3.75rem;
+}
+.address-info__block-name {
+  display: flex;
+  align-items: center;
+  column-gap: 1.25rem;
+  font-size: 1.25rem;
+  line-height: 1.3;
+  text-transform: uppercase;
+  color: var(--addressInfoBlockNameColor);
+}
+.address-info__block-name-icon {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.address-info__svc-contacts {
+  grid-area: contacts;
+  width: 100%;
+  padding-inline: clamp(0.625rem, 0.3343023256rem + 1.1627906977vw, 1.25rem);
+}
+.address-info__svc-catalog {
+  grid-area: services;
+  max-width: 45.3125rem;
+  width: 100%;
+  padding-inline: clamp(0.625rem, 0.3343023256rem + 1.1627906977vw, 1.25rem);
+  margin-bottom: 1.4375rem;
+}
+.address-info__qs-line {
+  grid-area: qs;
+  margin-block: 1.25rem 0;
+  justify-self: center;
+  max-width: 29.4375rem;
+  width: 100%;
+}
+.address-info__qs-line-link {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: 0.9375rem;
+  padding-block: 0.875rem;
+  padding-inline: 1.875rem;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+  color: var(--color-green-light);
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.5;
+  text-align: center;
+  text-transform: uppercase;
+  transition-duration: var(--transition-duration) !important;
+}
+.address-info__qs-line-phone {
+  white-space: nowrap;
+}
+.address-info__qs-line-text {
+  font-size: 0.9375rem;
+  line-height: 1.3;
+  max-width: 14.6875rem;
+}
+.address-info__buttons {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-self: start;
+  column-gap: clamp(0.625rem, 0.2180232558rem + 1.6279069767vw, 1.5rem);
+  row-gap: 0.625rem;
+  grid-area: buttons;
+}
+.address-info__buttons-note {
+  grid-column: 1/3;
+  text-align: center;
+  justify-self: center;
+  font-size: 0.75rem;
+  line-height: 1.2;
+  color: var(--text-color-dark-secondary);
+}
+.address-info__button {
+  justify-self: end;
+  flex-shrink: 0;
+  order: 2;
+  font-size: 0.875rem;
+  white-space: nowrap;
+}
+.address-info__button:nth-child(even) {
+  justify-self: start;
+}
+.address-info__gallery {
+  position: relative;
+}
+
+@media (width <= 100.06125rem) {
+  .address-info__body {
+    grid-template-columns: auto auto;
+  }
+}
+@media (width <= 81.31125rem) {
+  .address-info__body {
+    grid-template-areas: "contacts services" "qs services" "buttons buttons";
+  }
+  .address-info__svc-catalog {
+    max-width: 31.25rem;
+  }
+  .address-info__qs-line {
+    margin-block: 0 1.5rem;
+  }
+  .address-info__qs-line-link {
+    flex-direction: column;
+  }
+  .address-info__buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1/3;
+  }
+  .address-info__button {
+    align-self: center;
+    order: 0;
+  }
+}
+@media (width <= 47.99875rem) {
+  .address-info__title {
+    line-height: 1.4;
+  }
+  .address-info__body {
+    display: flex;
+    flex-direction: column;
+  }
+  .address-info__svc-contacts {
+    margin-bottom: 1.125rem;
+  }
+  .address-info__svc-catalog {
+    order: 1;
+    max-width: unset;
+  }
+  .address-info__qs-line {
+    align-self: center;
+    margin-bottom: 3.75rem;
+  }
+  .address-info__qs-line-link {
+    padding-block: 0;
+    line-height: 1.4;
+  }
+  .address-info__buttons {
+    order: 1;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+/*  ===================================  */
+/*  =====END address-info component====  */
+/*  ===================================  */
 /* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
 .advantage-card {
   --advantageCardTextColor: var(--color-gray-700);
@@ -1271,9 +1689,6 @@ button[aria-label]::before {
 .advantages {
   --advantagesSlidesQuantity: 4;
   overflow-x: hidden;
-}
-.advantages__title {
-  margin-block: 0 3.125rem;
 }
 .advantages__slider-wrapper {
   display: grid;
