--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -7,6 +7,12 @@
   &--big-margin {
     margin-bottom: var(--section-margin-y-big);
   }
+  &--margin-to-medium {
+    margin-bottom: var(--section-margin-y-to-medium);
+  }
+  &--big-to-medium-margin {
+    margin-bottom: var(--section-margin-y-big-to-medium);
+  }
   &--big-to-small-margin {
     margin-bottom: var(--section-margin-y-big-to-small);
   }
