--- a/styles/blocks/address-info/address-info.css
+++ b/styles/blocks/address-info/address-info.css
@@ -5,6 +5,9 @@
   flex-direction: column;
   row-gap: 1.1875rem;
 }
+.svc-contacts address {
+  font-style: normal;
+}
 .svc-contacts__list {
   width: 100%;
   display: flex;
