--- a/styles/blocks/page-heading/page-heading.css
+++ b/styles/blocks/page-heading/page-heading.css
@@ -35,6 +35,10 @@
 .page-heading__page-name {
   color: var(--color-dark);
 }
+.page-heading__page-name--small-mobile {
+  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
+  line-height: 1.5;
+}
 
 @media (width <= 63.99875rem) {
   .page-heading {
