--- a/styles/blocks/address-info/address-info.css
+++ b/styles/blocks/address-info/address-info.css
@@ -248,13 +248,37 @@
     padding-inline: 0;
   }
 }
+/* Styles for the map. part of block locations .Current, will need to be added...*/
+.map-block {
+  position: relative;
+}
+.map-block__iframe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.map-block__marker {
+  position: absolute;
+  top: 50%;
+  left: 30%;
+  width: clamp(1.125rem, 0.3691860465rem + 3.023255814vw, 2.75rem);
+  height: clamp(1.5rem, 0.511627907rem + 3.9534883721vw, 3.625rem);
+}
+.map-block__marker--active {
+  left: 40%;
+}
+
 /* Styles for conponent address-info. Descriprion of current service card. */
 .address-info {
   --addressInfoBlockNameColor: var(--color-gray-850);
 }
-.address-info__title {
-  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
-  margin-bottom: clamp(1.25rem, -0.2034883721rem + 5.8139534884vw, 4.375rem);
+.address-info__map-block {
+  max-width: 78.75rem;
+  width: 100%;
+  height: 15.625rem;
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  margin-block: 0 clamp(2.75rem, 1.9941860465rem + 3.023255814vw, 4.375rem);
 }
 .address-info__body {
   display: grid;
@@ -380,8 +404,9 @@
   }
 }
 @media (width <= 47.99875rem) {
-  .address-info__title {
-    line-height: 1.4;
+  .address-info__map-block {
+    border-radius: unset;
+    margin-block: 0 2.75rem;
   }
   .address-info__body {
     display: flex;
