--- a/styles/blocks/promo/promo-main-page.css
+++ b/styles/blocks/promo/promo-main-page.css
@@ -1,72 +1,22 @@
-/* File with styles for promo block in the main page */
+/* Section promo. Styles for main page */
 .promo {
-  --promoBackgroundHeight: 31.25rem;
-  --promoMainImageWidth: 31.25rem;
-  --promoMainImageHeight: 31.25rem;
-  --promoMinHeight: var(--promoBackgroundHeight);
-  --promoPaddingBlock: clamp(3.125rem, 1.6715116279rem + 5.8139534884vw, 6.25rem);
+  position: relative;
+  min-height: 31.25rem;
   color: var(--text-color-light);
-  min-height: var(--promoMinHeight);
   overflow: hidden;
-  margin-block: 0 var(--section-margin-y);
+  background: var(--color-grad-1);
 }
 .promo__background {
-  position: absolute;
-  z-index: -1;
+  max-width: 120rem;
   width: 100%;
-  min-height: var(--promoBackgroundHeight);
-  background: var(--color-grad-1);
-  overflow: hidden;
-}
-.promo__background-wrapper {
-  position: relative;
-  min-height: inherit;
-}
-.promo__inner {
-  padding-block: var(--promoPaddingBlock) 0;
-}
-.promo__body {
-  position: relative;
-}
-.promo__title {
-  max-width: 54.6875rem;
-  line-height: 1.27;
-  margin-bottom: 2.5rem;
-}
-.promo__subtitle {
-  margin-bottom: 2.5rem;
-  line-height: 1.5;
-  max-width: 32.1875rem;
-}
-.promo__buttons {
-  display: flex;
-  gap: clamp(1rem, 0.7674418605rem + 0.9302325581vw, 1.5rem);
-}
-.promo__main-image {
-  width: var(--promoMainImageWidth);
-  height: var(--promoMainImageHeight);
-}
-.promo__main-image-wrapper {
+  height: 31.25rem;
   position: absolute;
-  z-index: -1;
-  right: -5.625rem;
-  bottom: calc(var(--promoPaddingBlock) * -1);
-  width: var(--promoMainImageWidth);
-  height: var(--promoMainImageHeight);
-}
-.promo__main-image-wrapper::after {
-  content: "";
-  position: absolute;
-  z-index: -2;
-  border-radius: 50%;
-  bottom: 5%;
-  right: 0;
-  width: 95%;
-  height: 3.8125rem;
-  background-color: var(--color-black-light);
-  filter: blur(1rem);
+  left: 50%;
+  translate: -50% 0;
 }
 .promo__decor-image {
+  width: 16.8125rem;
+  height: 16.8125rem;
   position: absolute;
 }
 .promo__decor-image--left {
@@ -78,79 +28,138 @@
   bottom: -50%;
   translate: 0 -50%;
 }
+.promo__main-image {
+  width: inherit;
+  height: inherit;
+}
+.promo__main-image-wrapper {
+  width: 31.25rem;
+  height: 31.25rem;
+  position: absolute;
+  right: 15rem;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+.promo__main-image-wrapper::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  border-radius: 50%;
+  bottom: 5%;
+  right: 0;
+  width: 95%;
+  height: 3.8125rem;
+  background-color: var(--color-black-light);
+  filter: blur(1rem);
+}
+.promo__content {
+  padding-block: clamp(3.125rem, 1.6715116279rem + 5.8139534884vw, 6.25rem) 0;
+}
+.promo__title {
+  position: relative;
+  max-width: 54.6875rem;
+  line-height: 1.27;
+  margin-bottom: 2.5rem;
+}
+.promo__subtitle {
+  position: relative;
+  max-width: 20.375rem;
+  margin-bottom: 2.5rem;
+  line-height: 1.5;
+  max-width: 32.1875rem;
+}
+.promo__buttons {
+  display: flex;
+  gap: clamp(1rem, 0.7674418605rem + 0.9302325581vw, 1.5rem);
+}
+.promo__button {
+  position: relative;
+  font-size: 1rem;
+  letter-spacing: 0.028em;
+}
 
 @media (width <= 112.56125rem) {
+  .promo__main-image-wrapper {
+    right: 9.375vw;
+  }
   .promo__decor-image--left {
     top: -50%;
     translate: -50% 50%;
   }
-}
-@media (width <= 100.06125rem) {
   .promo__decor-image--right {
     translate: 50% -50%;
   }
 }
 @media (width <= 81.31125rem) {
+  .promo__main-image-wrapper {
+    right: 5.375vw;
+  }
   .promo__title {
-    max-width: 51.0625rem;
+    max-width: 44.0625rem;
+    margin-bottom: 1.9375rem;
+  }
+  .promo__subtitle {
+    margin-bottom: 1.9375rem;
   }
 }
 @media (width <= 63.99875rem) {
   .promo {
-    --promoBackgroundHeight: 24.625rem;
-    --promoMainImageWidth: 19.75rem;
-    --promoMainImageHeight: 19.75rem;
+    min-height: 24.625rem;
+    background: var(--color-grad-2), var(--color-grad-1);
   }
   .promo .container {
     --container-padding-x: 2.6875rem;
   }
   .promo__main-image-wrapper {
-    bottom: -3.125rem;
-    right: 1.5rem;
+    width: 19.75rem;
+    height: 19.75rem;
+    top: 2rem;
   }
   .promo__main-image-wrapper::after {
     height: 2.5rem;
+    max-width: 21.25rem;
+    left: 50%;
+    bottom: 2%;
+    translate: -50% 0;
+  }
+  .promo__content {
+    padding-block: 4.375rem 0;
   }
   .promo__title {
     max-width: 28.875rem;
     font-size: 1.5rem;
-    margin-bottom: 1.9375rem;
   }
   .promo__subtitle {
-    max-width: 21rem;
+    max-width: 21.25rem;
     font-size: 1rem;
     margin-bottom: 1.9375rem;
+  }
+  .promo__button {
+    font-size: 0.8125rem;
+    min-width: 10rem;
+    line-height: 1.69231;
   }
 }
 @media (width <= 47.99875rem) {
   .promo {
-    --promoBackgroundHeight: 31.25rem;
-    --promoMinHeight: 45rem;
-  }
-  .promo .container {
-    --container-padding-x: 0.75rem;
+    background: inherit;
   }
   .promo__background {
-    background: var(--color-grad-2), var(--color-grad-1);
-  }
-  .promo__body {
+    position: static;
+    top: unset;
+    left: unset;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-  .promo__title {
-    max-width: 20rem;
-    margin-inline: auto;
-    order: -2;
-    text-align: center;
-    line-height: 1.3;
-    margin-bottom: 1.1875rem;
-  }
-  .promo__subtitle {
+    align-items: end;
+    justify-content: center;
+    height: 30.25rem;
+    translate: 0;
     max-width: unset;
+    width: 100%;
+    background: var(--color-grad-2), var(--color-grad-1);
+    padding-inline: var(--container-padding-x);
+    padding-block: 0 1rem;
     margin-bottom: 0.625rem;
-    color: var(--text-color-dark);
-    font-weight: 600;
   }
   .promo__main-image {
     width: 19.75rem;
@@ -159,20 +168,34 @@
   .promo__main-image-wrapper {
     position: relative;
     right: unset;
-    bottom: unset;
-    order: -1;
-    margin-inline: auto;
-    margin-bottom: clamp(1.625rem, 0.9273255814rem + 2.7906976744vw, 3.125rem);
+    top: unset;
   }
-  .promo__button {
+  .promo__content {
+    padding-block: unset;
+    padding-inline: 0.75rem;
+  }
+  .promo__title {
+    position: absolute;
+    top: 2.5rem;
+    left: 50%;
+    translate: -50% 0;
     width: 100%;
+    text-align: center;
+    line-height: 1.3;
+  }
+  .promo__subtitle {
+    max-width: unset;
+    margin-bottom: 0.625rem;
+    color: var(--text-color-dark);
+    font-weight: 600;
+  }
+  .promo__buttons {
+    justify-content: center;
   }
 }
 @media (width <= 30.06125rem) {
-  .promo {
-    --promoMinHeight: 41.25rem;
-    --promoBackgroundHeight: 30.25rem;
-    --promoPaddingBlock: 2.5rem;
+  .promo__title {
+    max-width: 20rem;
   }
 }
 /*  ===================================  */
