--- a/styles/blocks/promo/promo-main-page.scss
+++ b/styles/blocks/promo/promo-main-page.scss
@@ -1,69 +1,51 @@
 @use "../../healpers" as *;
-/* File with styles for promo block in the main page */
+/* Section promo. Styles for main page */
 .promo {
-  --promoBackgroundHeight: #{rem(500)};
-  --promoMainImageWidth: #{rem(500)};
-  --promoMainImageHeight: #{rem(500)};
-  --promoMinHeight: var(--promoBackgroundHeight);
-  --promoPaddingBlock: #{fluid(100, 50)};
+  position: relative;
+  min-height: rem(500);
 
   color: var(--text-color-light);
-  min-height: var(--promoMinHeight);
   overflow: hidden;
-  margin-block: 0 var(--section-margin-y);
+  background: var(--color-grad-1);
 
   &__background {
-    position: absolute;
-    z-index: -1;
+    max-width: rem(1920);
     width: 100%;
-    min-height: var(--promoBackgroundHeight);
-    background: var(--color-grad-1);
-    overflow: hidden;
+    height: rem(500);
+    position: absolute;
+    left: 50%;
+    translate: -50% 0;
+  }
 
-    &-wrapper {
-      position: relative;
-      min-height: inherit;
+  &__decor-image {
+    @include square(rem(269));
+
+    position: absolute;
+    &--left {
+      top: rem(65);
+      left: rem(32);
     }
-  }
-
-  &__inner {
-    padding-block: var(--promoPaddingBlock) 0;
-  }
-
-  &__body {
-    position: relative;
-  }
-
-  &__title {
-    max-width: rem(875);
-    line-height: 1.27;
-    margin-bottom: rem(40);
-  }
-
-  &__subtitle {
-    margin-bottom: rem(40);
-    line-height: 1.5;
-    max-width: rem(515);
-  }
-
-  &__buttons {
-    display: flex;
-    gap: fluid(24, 16);
+    &--right {
+      right: 0;
+      bottom: -50%;
+      translate: 0 -50%;
+    }
   }
 
   &__main-image {
     &-wrapper {
+      @include square(rem(500));
+
       position: absolute;
-      z-index: -1;
-      right: rem(-90);
-      bottom: calc(var(--promoPaddingBlock) * -1);
-      width: var(--promoMainImageWidth);
-      height: var(--promoMainImageHeight);
+      right: rem(240);
+      display: flex;
+      align-items: center;
+      justify-content: end;
 
       &::after {
         content: "";
         position: absolute;
-        z-index: -2;
+        z-index: -1;
         border-radius: 50%;
         bottom: 5%;
         right: 0;
@@ -74,38 +56,56 @@
       }
     }
 
-    width: var(--promoMainImageWidth);
-    height: var(--promoMainImageHeight);
+    width: inherit;
+    height: inherit;
   }
 
-  &__decor-image {
-    position: absolute;
+  &__content {
+    padding-block: fluid(100, 50) 0;
+  }
 
-    &--left {
-      top: rem(65);
-      left: rem(32);
-    }
+  &__title {
+    position: relative;
+    max-width: rem(875);
+    line-height: 1.27;
+    margin-bottom: rem(40);
+  }
 
-    &--right {
-      right: 0;
-      bottom: -50%;
-      translate: 0 -50%;
-    }
+  &__subtitle {
+    position: relative;
+    max-width: rem(326);
+    margin-bottom: rem(40);
+    line-height: 1.5;
+    max-width: rem(515);
+  }
+
+  &__buttons {
+    display: flex;
+    gap: fluid(24, 16);
+  }
+
+  &__button {
+    position: relative;
+    font-size: rem(16);
+    letter-spacing: 0.028em;
   }
 }
 
 @media (width <= rem(1800.98)) {
   .promo {
+    &__main-image {
+      &-wrapper {
+        right: 9.375vw;
+      }
+    }
+
     &__decor-image {
       &--left {
         top: -50%;
         translate: -50% 50%;
       }
     }
-  }
-}
-@include desktop-media {
-  .promo {
+
     &__decor-image {
       &--right {
         translate: 50% -50%;
@@ -115,16 +115,26 @@
 }
 @include laptop-media {
   .promo {
+    &__main-image {
+      &-wrapper {
+        right: 5.375vw;
+      }
+    }
+
     &__title {
-      max-width: rem(817);
+      max-width: rem(705);
+      margin-bottom: rem(31);
+    }
+
+    &__subtitle {
+      margin-bottom: rem(31);
     }
   }
 }
 @include tablet-media {
   .promo {
-    --promoBackgroundHeight: #{rem(394)};
-    --promoMainImageWidth: #{rem(316)};
-    --promoMainImageHeight: #{rem(316)};
+    min-height: rem(394);
+    background: var(--color-grad-2), var(--color-grad-1);
 
     .container {
       --container-padding-x: #{rem(43)};
@@ -132,53 +142,86 @@
 
     &__main-image {
       &-wrapper {
-        bottom: rem(-50);
-        right: rem(24);
+        @include square(rem(316));
+
+        top: rem(32);
 
         &::after {
           height: rem(40);
+          max-width: rem(340);
+          left: 50%;
+          bottom: 2%;
+          translate: -50% 0;
         }
       }
+    }
+
+    &__content {
+      padding-block: rem(70) 0;
     }
 
     &__title {
       max-width: rem(462);
       font-size: rem(24);
-      margin-bottom: rem(31);
     }
 
     &__subtitle {
-      max-width: rem(336);
+      max-width: rem(340);
       font-size: rem(16);
       margin-bottom: rem(31);
+    }
+
+    &__button {
+      font-size: rem(13);
+      min-width: rem(160);
+      line-height: 1.69231;
     }
   }
 }
 @include mobile-media {
   .promo {
-    --promoBackgroundHeight: #{rem(500)};
-    --promoMinHeight: #{rem(720)};
-
-    .container {
-      --container-padding-x: #{rem(12)};
-    }
+    background: inherit;
 
     &__background {
-      background: var(--color-grad-2), var(--color-grad-1);
-    }
-    &__body {
+      position: static;
+      top: unset;
+      left: unset;
       display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      align-items: end;
+      justify-content: center;
+      height: rem(484);
+      translate: 0;
+      max-width: unset;
+      width: 100%;
+      background: var(--color-grad-2), var(--color-grad-1);
+      padding-inline: var(--container-padding-x);
+      padding-block: 0 rem(16);
+      margin-bottom: rem(10);
+    }
+
+    &__main-image {
+      &-wrapper {
+        position: relative;
+        right: unset;
+        top: unset;
+      }
+
+      @include square(rem(316));
+    }
+
+    &__content {
+      padding-block: unset;
+      padding-inline: rem(12);
     }
 
     &__title {
-      max-width: rem(320);
-      margin-inline: auto;
-      order: -2;
+      position: absolute;
+      top: rem(40);
+      left: 50%;
+      translate: -50% 0;
+      width: 100%;
       text-align: center;
       line-height: 1.3;
-      margin-bottom: rem(19);
     }
 
     &__subtitle {
@@ -188,30 +231,16 @@
       font-weight: 600;
     }
 
-    &__main-image {
-      &-wrapper {
-        position: relative;
-        right: unset;
-        bottom: unset;
-        order: -1;
-        margin-inline: auto;
-        margin-bottom: fluid(50, 26);
-      }
-
-      width: rem(316);
-      height: rem(316);
-    }
-
-    &__button {
-      width: 100%;
+    &__buttons {
+      justify-content: center;
     }
   }
 }
 @include mobile-s-media {
   .promo {
-    --promoMinHeight: #{rem(660)};
-    --promoBackgroundHeight: #{rem(484)};
-    --promoPaddingBlock: #{rem(40)};
+    &__title {
+      max-width: rem(320);
+    }
   }
 }
 /*  ===================================  */
