--- a/styles/pages/addresses-page/addresses.css
+++ b/styles/pages/addresses-page/addresses.css
@@ -249,10 +249,6 @@ svg * {
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
 }
-.container-big {
-  max-width: var(--container-width-big);
-  margin-inline: auto;
-}
 
 .visually-hidden {
   position: absolute !important;
@@ -937,6 +933,10 @@ button[aria-label]::before {
 }
 .page-heading__page-name {
   color: var(--color-dark);
+}
+.page-heading__page-name--small-mobile {
+  font-size: clamp(1.25rem, 0.9011627907rem + 1.3953488372vw, 2rem);
+  line-height: 1.5;
 }
 
 @media (width <= 63.99875rem) {
